# vinum

./: .gitignore  CMakeLists.txt  README.md  main.cpp
compile/: example.vinum  example.vnm  float_example.vnm
compile/ast/: ast.cpp  ast.h
compile/ast/expressions/array_access_expression/: array_access_expression.cpp  array_access_expression.h
compile/ast/expressions/binary_expression/: binary_expression.cpp  binary_expression.h
compile/ast/expressions/conditional_expression/: conditional_expression.cpp  conditional_expression.h
compile/ast/expressions/functional_expression/: functional_expression.cpp  functional_expression.h
compile/ast/expressions/unary_expression/: unary_expression.cpp  unary_expression.h
compile/ast/expressions/value_expression/: value_expression.cpp  value_expression.h
compile/ast/expressions/variable_expression/: variable_expression.cpp  variable_expression.h
compile/ast/optimizations/: ConstantFolding.cpp  ConstantFolding.h  ConstantPropagation.cpp  ConstantPropagation.h  DeadCodeElimination.cpp  DeadCodeElimination.h  Optimizable.h  VariableInfo.h
compile/ast/statements/array_assignment_statement/: array_assignment_statement.cpp  array_assignment_statement.h
compile/ast/statements/array_initialization_statement/: array_initialization_statement.cpp  array_initialization_statement.h
compile/ast/statements/assigment_statement/: assigment_statement.cpp  assigment_statement.h
compile/ast/statements/block_statement/: block_statement.cpp  block_statement.h
compile/ast/statements/break_statement/: break_statement.cpp  break_statement.h
compile/ast/statements/continue_statement/: continue_statement.cpp  continue_statement.h
compile/ast/statements/for_statement/: for_statement.cpp  for_statement.h
compile/ast/visitor/: node.h  resultVisitor.h  visitor.h
compile/generator/: generator.cpp  generator.h
compile/generator/functions/: strconcat.cpp
compile/lexer/: lexer.cpp  lexer.h  token.h
compile/lib/: function.h  value.cpp  value.h
compile/lib/array_value/: array_value.cpp  array_value.h
compile/lib/boolean_value/: boolean_value.cpp  boolean_value.h
compile/lib/builtin/functions/: functions.cpp  (+1 more)
compile/lib/double_value/: double_value.cpp  double_value.h
compile/lib/int_value/: int_value.cpp  int_value.h
compile/lib/long_value/: long_value.cpp  long_value.h
compile/lib/number_value/: number_value.cpp  number_value.h
compile/lib/short_value/: short_value.cpp  short_value.h
compile/lib/string_value/: string_value.cpp  string_value.h
compile/lib/user_function/: user_function.cpp  user_function.h
compile/lib/variables/: variables.cpp  variables.h
compile/parser/: parser.cpp  parser.h
greenTestCodes/: if_else_example.vnm  second_example.vnm  string_example.vnm
runtime/jit/: jit_compiler.cpp  jit_compiler.h
runtime/vm/: vm.cpp  vm.h
vinum_codes/: arithmetic_and_overflow.vnm  array_test.vnm  arrays.vnm  cycle.vnm  era.vnm  for.vnm  function.vnm  optimizations_tests.vnm  recurcion.vnm  test.vnm  test_gc.vnm  testgc.vnm  tmp.vnm  typeconversion.vnm
vnm_bench/: arrays.vnm
(+18 files in other folders)
